--- a/practicaBootstrap1.html
+++ b/practicaBootstrap1.html
@@ -90,7 +90,7 @@
             <div class="col-10">
               <div class="card-group">
                 <div class="card">
-                  <img src="./fotos/3-2023-04-06 at 11.38.26.jpeg" class="card-img-top ancho-foto" alt="foto1">
+                  <img src="3-2023-04-06 at 11.38.26.jpeg" class="card-img-top ancho-foto" alt="foto1">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
