--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                   </div>
                 </div>
                 <div class="card">
-                  <img src="./fotos/2-2023-04-06at11_38.jpeg" class="card-img-top ancho-foto" alt="foto2">
+                  <img src="2-2023-04-06at11_38.jpeg" class="card-img-top ancho-foto" alt="foto2">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -106,7 +106,7 @@
                   </div>
                 </div>
                 <div class="card">
-                  <img src="./fotos/1-2023-04-06at11-38.jpeg" class="card-img-top ancho-foto" alt="...">
+                  <img src="1-2023-04-06at11-38.jpeg" class="card-img-top ancho-foto" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -129,7 +129,7 @@
           <div class="col-10">
             <div class="card-group">
               <div class="card">
-                <img src="./fotos/2-2023-04-06at11_38.jpeg" class="card-img-top ancho-foto" alt="...">
+                <img src="2-2023-04-06at11_38.jpeg" class="card-img-top ancho-foto" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -137,7 +137,7 @@
                 </div>
               </div>
               <div class="card">
-                <img src="./fotos/1-2023-04-06at11-38.jpeg" class="card-img-top ancho-foto" alt="...">
+                <img src="1-2023-04-06at11-38.jpeg" class="card-img-top ancho-foto" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -145,7 +145,7 @@
                 </div>
               </div>
               <div class="card">
-                <img src="./fotos/3-2023-04-06 at 11.38.26.jpeg" class="card-img-top ancho-foto" alt="...">
+                <img src="3-2023-04-06 at 11.38.26.jpeg" class="card-img-top ancho-foto" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -168,7 +168,7 @@
         <div class="col-10">
           <div class="card-group">
             <div class="card">
-              <img src="./fotos/3-2023-04-06 at 11.38.26.jpeg" class="card-img-top ancho-foto" alt="...">
+              <img src="3-2023-04-06 at 11.38.26.jpeg" class="card-img-top ancho-foto" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -176,7 +176,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="./fotos/2-2023-04-06at11_38.jpeg" class="card-img-top ancho-foto" alt="...">
+              <img src="2-2023-04-06at11_38.jpeg" class="card-img-top ancho-foto" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -184,7 +184,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="./fotos/1-2023-04-06at11-38.jpeg" class="card-img-top ancho-foto" alt="...">
+              <img src="1-2023-04-06at11-38.jpeg" class="card-img-top ancho-foto" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
