--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="card-group">
               <div class="card">
                 <img
-                  src="3-2023-04-06 at 11.38.26.jpeg"
+                  src="1-2023-04-06at11-38.jpeg"
                   class="card-img-top ancho-foto"
                   alt="foto1"
                 />
@@ -124,7 +124,7 @@
               </div>
               <div class="card">
                 <img
-                  src="./fotos/2-2023-04-06at11_38.jpeg"
+                  src="2-2023-04-06at11_38.jpeg"
                   class="card-img-top ancho-foto"
                   alt="foto2"
                 />
@@ -141,7 +141,7 @@
               </div>
               <div class="card">
                 <img
-                  src="./fotos/1-2023-04-06at11-38.jpeg"
+                  src="3-2023-04-06 at 11.38.26.jpeg"
                   class="card-img-top ancho-foto"
                   alt="..."
                 />
@@ -170,7 +170,7 @@
             <div class="card-group">
               <div class="card">
                 <img
-                  src="./fotos/2-2023-04-06at11_38.jpeg"
+                  src="2-2023-04-06at11_38.jpeg"
                   class="card-img-top ancho-foto"
                   alt="..."
                 />
@@ -188,7 +188,7 @@
               </div>
               <div class="card">
                 <img
-                  src="./fotos/1-2023-04-06at11-38.jpeg"
+                  src="2-2023-04-06at11_38.jpeg"
                   class="card-img-top ancho-foto"
                   alt="..."
                 />
@@ -205,7 +205,7 @@
               </div>
               <div class="card">
                 <img
-                  src="./fotos/3-2023-04-06 at 11.38.26.jpeg"
+                  src="2-2023-04-06at11_38.jpeg"
                   class="card-img-top ancho-foto"
                   alt="..."
                 />
@@ -234,7 +234,7 @@
             <div class="card-group">
               <div class="card">
                 <img
-                  src="./fotos/3-2023-04-06 at 11.38.26.jpeg"
+                  src="2-2023-04-06at11_38.jpeg"
                   class="card-img-top ancho-foto"
                   alt="..."
                 />
@@ -252,7 +252,7 @@
               </div>
               <div class="card">
                 <img
-                  src="./fotos/2-2023-04-06at11_38.jpeg"
+                  src="2-2023-04-06at11_38.jpeg"
                   class="card-img-top ancho-foto"
                   alt="..."
                 />
@@ -269,7 +269,7 @@
               </div>
               <div class="card">
                 <img
-                  src="./fotos/1-2023-04-06at11-38.jpeg"
+                  src="2-2023-04-06at11_38.jpeg"
                   class="card-img-top ancho-foto"
                   alt="..."
                 />
