--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="card-group">
               <div class="card">
                 <img
-                  src="./fotos/3-2023-04-06 at 11.38.26.jpeg"
+                  src="fotos/3-2023-04-06 at 11.38.26.jpeg"
                   class="card-img-top ancho-foto"
                   alt="foto1"
                 />
