--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital@1&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="practicaBootstrap1.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
