--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>@Sale.feria</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -99,6 +99,7 @@
                 <option value="value2">Menor a mayor</option>
                 <option value="value3">Mayor a menor</option>
               </select>
+              <!---->
               <br>
               <br>
               <div class="precio-en-head">                
